--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="C:/Users/mario/OneDrive/Escritorio/INGENIERIA_3/IPS/jcalendar/lib/jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mario/OneDrive/Escritorio/INGENIERIA_3/IPS/jcalendar/lib/jgoodies-looks-2.4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/mario/OneDrive/Escritorio/INGENIERIA_3/IPS/jcalendar/lib/junit-4.6.jar"/>
+	<classpathentry kind="lib" path="C:/BD/tools/hsqldb/hsqldb.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
