--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/resources/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="src/main/resources/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
