Corregida la HU del sprint 1 y modificadas cosas del código
- Modificadas las tablas de la bd
	> Cambiado nombre de RESERVA a seApunta
	> Añadida tabla RESERVA entre SOCIO e INSTALACION
	> Actividad tiene el nombre de la instalacion
	> TipoActividad ya no tiene el nombre de la instalacion
	> Añadida tabla TIENE entre RECURSO e INSTALACION
	> Modificadas las inserciones del data.script
	> Añadidas inserciones para las dos tablas nuevas

- Codigo:
	> Cambiadas las listas de GymControlador por HashMaps para no tener que hacer 500 for loops o crear 50 objetos iguales
	> Cambiado el método de carga de tipos de actividad para que coja los recursos ya creados
	> Quitada la instalacion de la creación de Tipo de Actividad y de la inserción de tipos de actividad
	> Modificada la clase Actividad para que guarde una instalación y que el constructor acepte una instalación

--- a/src/main/resources/BD/data.properties
+++ b/src/main/resources/BD/data.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Tue Oct 18 14:10:04 CEST 2022
+#Fri Oct 28 18:01:43 CEST 2022
+modified=yes
 version=2.3.2
-modified=no
